# OCCEasyDrawing

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/Common/: Common.hpp  ShapeRenderStyle.hpp
include/EasyDrawing/: EasyDrawing.hpp
include/OccEasyDrawing/: EasyDrawing.hpp
include/OccEasyDrawing/Common/: Common.hpp
src/: EasyDrawing.cpp
